# ProtoLog

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmarks.cpp
protolog/: CMakeLists.txt
protolog/include/: AsyncLogger.hpp  ConcurrentQueue.hpp  Init.hpp  LogRecord.hpp  Logger.hpp  Protolog.hpp  Severity.hpp  SyncLogger.hpp  Utility.hpp
protolog/include/Formatters/: ColoredFormatter.hpp  CustomizibleFormatter.hpp  DetailedFormatter.hpp  Formatter.hpp  MessageOnlyFormatter.hpp  SimpleFormatter.hpp
protolog/include/Handlers/: ColoredOstreamHandler.hpp  FileHandler.hpp  Handler.hpp  OstreamHandler.hpp  RollingFileHandler.hpp  StringStreamHandler.hpp
samples/: CMakeLists.txt  sample.cpp
test/: CMakeLists.txt  test.cpp
